[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
derive_builder = "0.11.2"
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
hj-sdk = { git = "ssh://git@github.com/Reglament989/helljeng-encryption-sdk.git" }

[profile.release]
codegen-units = 1
opt-level = "z"
# lto = true